# efficient_factory

./: .gitignore  README.md
efficient-agent-loop/: .gitignore  README.md  pyproject.toml
efficient-agent-loop/examples/: experiment.json  lab.yaml
efficient-agent-loop/examples/auto_deploy/: experiment_flux_sparse.json  lab_flux_real.yaml  lab_flux_reviewer.yaml  reviewer_flux.py  run_checker_from_action.py  run_codex_executor.py  run_executor_from_action.py  visual_quality_from_metrics.py
efficient-agent-loop/prompts/: checker.md  executor.md  reviewer.md
efficient-agent-loop/src/efficient_agent_loop/: __init__.py  agents.py  cli.py  git_utils.py  prompts.py  scheduler.py  schemas.py
efficient-agent-loop/tests/: test_auto_deploy_permissions.py  test_auto_deploy_reviewer_flux.py  test_scheduler_flow.py  test_schemas.py
playground/: .gitignore  README.md  README_CHECKER.md  README_EXECUTOR.md  README_REVIEWER.md  folder_paths.py  nodes.py  requirements.txt
playground/agent_loop/: README.md  git_state_snapshot.py  metrics_to_checker_result.py  reset_to_initial_state.sh
playground/benchmark/: __init__.py  flux_schnell_benchmark.py
playground/comfy/: cli_args.py
playground/comfy_api/: feature_flags.py
playground/comfy_config/: config_parser.py
playground/comfy_extras/: nodes_easycache.py  nodes_quantization.py  nodes_reuse_cache.py  nodes_sparse_attention.py  nodes_teacache.py
playground/draft_canvas/: __init__.py  flux_schnell_cache_canvas.py  flux_schnell_candidate_canvas.py  flux_schnell_quantization_canvas.py  split_loaders.py  (+1 more)
(+66 files in other folders)
