[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "efficient-agent-loop"
version = "0.1.0"
description = "A minimal three-role scheduler for code experiment loops."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "efficient-agent-loop contributors" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
yaml = ["PyYAML>=6"]

[project.scripts]
efficient-agent-loop = "efficient_agent_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
